2012-02-08  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] doc rebasing does not respect DESTDIR
        https://bugs.webkit.org/show_bug.cgi?id=78177

        Reviewed by Martin Robinson.

        * GNUmakefile.am: Pass DESTDIR on to generate-gtkdoc, when
        calling it for rebasing.
        * gtk/generate-gtkdoc:
        (get_common_options): Handle the new --virtual-root option.
        * gtk/gtkdoc.py:
        (GTKDoc.rebase_installed_docs): If a virtual-root has been given, pass
        it on to gtkdoc-rebase as dest-dir, and prefix the htmldir with it.

2012-02-08  Adam Barth  <abarth@webkit.org>

        Remove Python 2.5 support from WebKit
        https://bugs.webkit.org/show_bug.cgi?id=71593

        Reviewed by Eric Seidel.

        This is the last vestige of our Python 2.5 support.

        * Scripts/webkitpy/tool/commands/queues_unittest.py:
        (AbstractQueueTest.test_log_from_script_error_for_upload):

2012-02-08  Adam Barth  <abarth@webkit.org>

        version_check.py should inform users that we don't support Python 2.5 anymore
        https://bugs.webkit.org/show_bug.cgi?id=78179

        Reviewed by Eric Seidel.

        We don't support Python 2.5 anymore.

        * Scripts/webkitpy/common/version_check.py:

2012-02-08  Adam Barth  <abarth@webkit.org>

        test_configuration.py shouldn't re-implement itertools
        https://bugs.webkit.org/show_bug.cgi?id=78178

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/layout_tests/models/test_configuration.py:
        (TestConfigurationConverter.to_specifiers_list):
        (TestConfigurationConverter.to_specifiers_list.try_collapsing):
        (TestConfigurationConverter.to_specifiers_list.try_abbreviating):
        (TestConfigurationConverter):

2012-02-08  Adam Barth  <abarth@webkit.org>

        webkitpy should reply upon the multiprocessing package existing
        https://bugs.webkit.org/show_bug.cgi?id=78176

        Reviewed by Eric Seidel.
